force-app/main/default/objects/Compra_de_insumo__c/Compra_de_insumo__c.object-meta.xml
<CustomObject>
    <label>Compra de insumo</label>
    <nameField>
        <displayFormat>Compra-{0000000}</displayFormat>
        <label>Compra Insumo Cod</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compras de insumos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>