force-app/main/default/objects/Compra_de_insumo__c/fields/Articulo__c.field-meta.xml
<CustomField>
    <fullName>Articulo__c</fullName>
    <label>Artículo</label>
    <referenceTo>Articulo__c</referenceTo>
    <relationshipName>Compras</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>