force-app/main/default/objects/Compra_de_insumo__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Cantidad</label>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>