force-app/main/default/objects/Compra_de_insumo__c/fields/Gasto__c.field-meta.xml
<CustomField>
    <fullName>Gasto__c</fullName>
    <label>Gasto</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>