force-app/main/default/objects/Compra_de_insumo__c/fields/Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Proveedor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Proveedor</label>
    <referenceTo>Proveedor__c</referenceTo>
    <relationshipName>Compras</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>