force-app/main/default/objects/Compra_de_insumo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Fecha_de_compra__c</columns>
    <columns>Proveedor__c</columns>
    <columns>Articulo__c</columns>
    <columns>Cantidad__c</columns>
    <columns>Gasto__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>